src/test/ui/issues/1-9999/issue-2995.stderr
error[E0605]: non-primitive cast: `*const isize` as `&isize`
  --> $DIR/issue-2995.rs:2:22
   |
LL |     let _q: &isize = p as &isize;
   |                      ^^^^^^^^^^^ an `as` expression can only be used to convert between primitive types or to coerce to a specific trait object

error: aborting due to previous error

For more information about this error, try `rustc --explain E0605`.
